add a contentbox margin to Thin and Tall

--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -11,6 +11,10 @@ body {
     min-height: 100vh;
     color: $text-color;
     font-family: sans-serif;
+    
+    div.contentbox {
+        margin: 12px;
+    }
 }
 
 header {
