Slightly improve layout of Thin and Tall

--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -13,7 +13,9 @@ body {
     font-family: sans-serif;
     
     div.contentbox {
-        margin: 12px;
+        margin-left: 12px;
+        margin-right: 12px;
+        margin-down: 12px;
     }
 }
 
