fix css syntax error in Thin and Tall

--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -15,7 +15,7 @@ body {
     div.contentbox {
         margin-left: 12px;
         margin-right: 12px;
-        margin-down: 12px;
+        margin-bottom: 12px;
     }
 }
 
