--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -28,6 +28,12 @@ header {
         display: inline-block;
         font-family: bebas, sans-serif;
         font-size: 64px;
+    }
+    
+    nav {
+        float: right;
+        padding-left: 5px;
+        padding-right: 5px;
         
         a {
             color: $page-link-color;
@@ -43,13 +49,7 @@ header {
     .title {
         float: left;
     }
-    
-    .swap-view {
-        float: right;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-    
+
     .clear {
         clear: both;
     }
