Start integration of cog menu and Config 3

--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -44,6 +44,12 @@ header {
         a:hover {
             color: $page-link-color-hover;
         }
+        
+        #dropdown {
+            background-image: url('/theme/static/dropdown.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
     }
     
     .title {
