--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -45,13 +45,11 @@ header {
             color: $page-link-color-hover;
         }
         
-        #dropdown {
-            font-family: 'csg2glyphs';
-        }
-        
         #dropdown-container {
             display: none;
             position: absolute;
+            width: 200px;
+            margin-left: -200px;
         }
     }
     
