--- a/themes/thinandtall/master.scss
+++ b/themes/thinandtall/master.scss
@@ -49,6 +49,8 @@ header {
             display: none;
             position: absolute;
             width: 200px;
+            background-color: darken($background-primary, 10%);
+            color: $text-color;
         }
     }
     
